page stretch & scroll fix

--- a/vue/src/style/style.css
+++ b/vue/src/style/style.css
@@ -6,7 +6,7 @@
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 #nav {
@@ -43,8 +43,7 @@
 
 /* user page */
 .root {
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
 }
 
 .main {
@@ -77,7 +76,6 @@
 }
 
 .content {
-    min-height: 100%;
     flex-grow: 1;
 }
 
